Fix nav weird on smaller screens

--- a/assets/sass/_colors.scss
+++ b/assets/sass/_colors.scss
@@ -13,5 +13,5 @@ $sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
   Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 $serif: Quattrocento, serif;
 
-$crunch-width: 800px;
+$crunch-width: 1000px;
 $site-width: 1200px;
